-issue#838: CVE-2017-10970: XSS Issue in link.php
-issue#839: The Database column name 'rows' is a reserved word in MariaDB 10.2+
-issue#845: External links tabs should appear at the end of the tab view
-issue#846: Web crawl of Cacti site shows errors in the log
-issue: Up/Down arrow titles labeled incorrectly on Tree Management page
-issue: Make the default Export Type a Device Template
-feature: updated Dutch language

1.1.12
-issue#822: Aggregate Graph Items are incorrectly editable
-issue#823: Allow Filters to be hidden
-issue#834: Add spacing on graphs pages
-issue: Uninstalled plugins can not install
-issue: Location of filter functions in host.php prevent full responsive filter implementation
-feature: Implement first phase of responsive search filters

1.1.11
-issue#642: RRA not written or WARNING: Poller Output Table not Empty
-issue#779: PHP running out of memory due to date format issues
-issue#791: SeLinux causing problems due to recent enhancement of the Cacti log
-issue#818: Unable to unselect all SpikeKill templates under settings
-issue#831: Unable to add devices from automation devices that don't have a snmpSysname
-issue: incorrect version of pace: fix progess bar
-issue: date_format(): fix date separator character
-issue: host.php: fix itemCount en rowCount when result = null
-issue: clog: fix scandir for systems with limited permissions to log directory
-issue: clog: fix listing of logfiles
-issue: Stop New Graphs filter interface from taking too much space
-issue: Pagination of clog is not done via ajax
-issue: Unable to dry run spikekill's from Graphs page
-issue: Default sort order does not highlight on Aggregate Template page
-issue: Correct display issue with Graph Templates when editing Device
-issue: External Data Sources show as having poller interval on Data Source page
-issue: Allow Selecting 'External' as the Data Source Profile when creating non-templated Data Source