@@ -10,6 +10,7 @@ Cacti CHANGELOG
 -issue#846: Web crawl of Cacti site shows errors in the log
 -issue: Up/Down arrow titles labeled incorrectly on Tree Management page
 -issue: Make the default Export Type a Device Template
+-issue: Fix SNMPagent MIB cache issues
 -feature: updated Dutch language
 
 1.1.12
